--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,8 @@ body{
     background-color: white;
     transform-origin: 50% 50%;
     transform: scale(1);
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 
 .l-box {
