--- a/public/css/race.css
+++ b/public/css/race.css
@@ -12,5 +12,15 @@
 }
 
 #minimap{
-    
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+#raceTimestamp{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align:center;
 }
