Debut interface ranking + race :rabbit2:
:toilet:

--- a/public/css/race.css
+++ b/public/css/race.css
@@ -1,7 +1,7 @@
 #race{
-    /*display: none;*/
+    display: none;
     height: 100%;
-    position: relative;
+    position: absolute;
     z-index: 8000;
 }
 
@@ -17,10 +17,16 @@
     right: 0;
 }
 
-#raceTimestamp{
+.time{
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align:right;
+}
+
+#nblap{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    text-align:center;
+    text-align:left;
 }
