--- a/public/css/race.css
+++ b/public/css/race.css
@@ -1,8 +1,10 @@
 #race{
-    display: none;
+    display: block;
     height: 100%;
     position: absolute;
     z-index: 8000;
+    width: 100%;
+    height:100%;
 }
 
 #canvas{
@@ -15,6 +17,9 @@
     position: absolute;
     bottom: 0;
     right: 0;
+    background-color: yellow;
+    width: 25%;
+    height: 25%;
 }
 
 .time{
